got the udpated architecture of backend working with frontend

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://postgres:password@localhost:5432/myneos
+sqlalchemy.url = postgresql://unnikoroth@localhost:5432/myneos
 
 [post_write_hooks]
 
